<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/name_input"
        android:hint="@string/user_name"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/email_address"
        android:hint="@string/emile"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/email_address"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="numberPassword"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/re_enter_pass"
        android:hint="@string/reenter_password"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="numberPassword"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/birthday_date"
        android:hint="@string/birthday_date"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/re_enter_pass"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="date"
        android:autofillHints="" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthday_date"
        android:checkedButton="@id/bottom">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/birthday_date"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/famale"
            android:id="@+id/bottom_femal"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/male"
            app:layout_constraintTop_toBottomOf="@id/bottom_femal"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/male" />
    </RadioGroup>


    <Button
        android:id="@+id/btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        app:layout_constraintTop_toBottomOf="@id/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="100dp"/>

    <TextView
        android:id="@+id/text_massege"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        app:layout_constraintTop_toBottomOf="@id/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>